--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     
     <nav>
         <div class="nav-brand">Adetola</div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+        <div class="nav-toggle" id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul class="nav-menu" id="nav-menu">
+            <li><a href="#home" class="nav-link">Home</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#skills" class="nav-link">Skills</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <button id="theme-switcher" class="theme-switcher" aria-label="Toggle dark mode">
             ☀️
@@ -148,7 +153,7 @@
                         Email Me
                     </a>
                     <a href="tel:+(234)-904-7515-607">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.57-.35-.12-.74-.03-1.01.24l-2.6 2.6c-3.11-1.55-5.63-4.07-7.18-7.18l2.6-2.6c.27-.27.36-.66.24-1.01C8.62 6.41 8.41 5.22 8.41 4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2s.9 2 2 2h.01c.78 0 1.54.15 2.25.43.34.14.7-.02.9-.3l2.25-2.25c.31-.31.75-.42 1.15-.26.83.34 1.66.72 2.47 1.1.41.19.86.08 1.15-.22l2.25-2.25c.14-.14.28-.27.42-.4.18-.18.4-.29.65-.29.28 0 .5.12.67.33.16.2.25.45.25.75V20c0 1.1-.9 2-2 2h-2c-1.1 0-2-.9-2-2v-.01z"/></svg>
+                        <i class="fas fa-phone"></i>
                         Call Me
                     </a>
                     <a href="https://linkedin.com/in/adetola-adedoyin" target="_blank">
